--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">NewsFeedApp</string>
+    <string name="no_news">No News Available</string>
+    <string name="no_internet">Check Internet Connection and Try again</string>
 </resources>
